# remoteApiBindings

./: .gitignore  CMakeLists.txt  config.pri  license.txt
java/: extApiJava.h  remoteApiSharedLibJava-32.vcxproj  remoteApiSharedLibJava-64.vcxproj  remoteApiSharedLibJava.pro
java/java/: complexCommandTest.java  simpleSynchronousTest.java  simpleTest.java
java/java/coppelia/: remoteApi.java
java/lib/MacOS/: libremoteApiJava.dylib
lib/: complexCommandTest.cpp  remoteApiSharedLib-32.vcxproj  remoteApiSharedLib-64.vcxproj  remoteApiSharedLib.pro  simpleTest.cpp
lib/lib/MacOS/: remoteApi.dylib
lua/: remoteApiLua-32.vcxproj  remoteApiLua-64.vcxproj  remoteApiLua.cpp  remoteApiLua.pro
lua/lib/MacOS/: remoteApi.dylib
lua/lua/: complexCommandTest.lua  simpleSynchronousTest.lua  simpleTest.lua
matlab/matlab/: readMe.txt  remApi.m  remoteApiProto.m  simpleSynchronousTest.m  simpleTest.m
octave/: buildLin.m  buildMac.m  buildWin.m  remApi.cc
octave/octave/: complexCommandTest.m  remApiSetup.m  simpleSynchronousTest.m  simpleTest.m
python/python/: pController.py  remote_childscript.lua  sendIkMovementSequence-mov.py  sendIkMovementSequence-pts.py  sendMovementSequence-mov.py  sendMovementSequence-pts.py  sendSimultan2MovementSequences-mov.py  simpleSynchronousTest.py  simpleTest.py  synchronousImageTransmission.py  visualization.py  vrep.py
