cmake_minimum_required(VERSION 3.12)
project(remoteApiBindings)

if(NOT COPPELIASIM_INCLUDE_DIR)
    if(DEFINED ENV{COPPELIASIM_ROOT_DIR})
        set(COPPELIASIM_INCLUDE_DIR $ENV{COPPELIASIM_ROOT_DIR}/programming/include)
    else()
        set(COPPELIASIM_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../include)
    endif()
endif()
list(APPEND CMAKE_MODULE_PATH ${COPPELIASIM_INCLUDE_DIR}/cmake)
find_package(CoppeliaSim 4.5.0.7 REQUIRED)

coppeliasim_add_resource(license.txt SUBDIR programming/remoteApiBindings)
coppeliasim_add_resource_directory(java SUBDIR programming/remoteApiBindings)
coppeliasim_add_resource_directory(lib SUBDIR programming/remoteApiBindings)
coppeliasim_add_resource_directory(lua SUBDIR programming/remoteApiBindings)
coppeliasim_add_resource_directory(matlab SUBDIR programming/remoteApiBindings)
coppeliasim_add_resource_directory(octave SUBDIR programming/remoteApiBindings)
coppeliasim_add_resource_directory(python SUBDIR programming/remoteApiBindings)
